--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
 <title>Portfolio</title>
 </head>
 <body>
-    <div class="d-flex bg-warning">
-        <h1>Hello world</h1>
-        <p>Hi there</p>
-        <i class="fab fa-instagram" aria-hidden="true"></i>
-      </div>
+  <div class="hero">
+    <p>👋🏽Hello, I am</p>
+    <h1>Eltina Ngwarai</h1>
+    <h2 mb-3>Front-end developer based in Germany</h2>
+    <div>
+        <a href="#" class="btn btn-branding">Contact me</a>
+    </div>
+
+  </div>
 </html>
