--- a/index.html
+++ b/index.html
@@ -1,29 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-<script
-      src="https://kit.fontawesome.com/ddc3ee268a.js"
-      crossorigin="anonymous"
-    ></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/ddc3ee268a.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
 
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&amp;family=Poppins:wght@500;700&amp;display=swap" rel="stylesheet">
-<link rel="stylesheet" href="styles.css">   
-<title>Portfolio</title>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&amp;family=Poppins:wght@500;700&amp;display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <title>Portfolio</title>
 </head>
-<body>
-  <div class="hero">
-    <p>👋🏽Hello, I am</p>
-    <h1>Eltina Ngwarai</h1>
-    <h2 mb-3>Front-end developer based in Germany</h2>
-    <div>
-        <a href="#" class="btn btn-branding">Contact me</a>
-    </div>
 
-  </div>
+<body>
+    <div class="hero">
+        <p>👋🏽Hello, I am</p>
+        <h1>Eltina Ngwarai</h1>
+        <h2 mb-3>Front-end developer based in Germany</h2>
+        <div>
+            <a href="#" class="btn btn-branding">Contact me</a>
+        </div>
+
+    </div>
+    <p class="text-center m-5">
+        Featured projects will be shown below
+    </p>
+    <div class="container">
+        <div class=" row mb-5">
+            <div class="col d-none d-lg-block">
+                <img src="images/cheesecake.png" alt="" class="img-fluid">
+            </div>
+            <div class="col">
+                <div class="project-description">
+                <h2 class="mb-5">Cheesecake Project</h2>
+                <p class="mb-5 text-muted" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt animi quod, esse totam delectus repellendus alias ipsam, autem dolor voluptatem quisquam vitae omnis quo temporibus dolorum a quasi molestiae perferendis.</p>
+                <a href="" class="btn btn-branding-outline">Learn More</a>
+            </div>
+        </div>
+        <div class=" row mb-5">
+            <div class="col">
+                <div class="project-description">
+                <h2 class="mb-5">Weather App</h2>
+                <p class="mb-5 text-muted" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt animi quod, esse totam delectus repellendus alias ipsam, autem dolor voluptatem quisquam vitae omnis quo temporibus dolorum a quasi molestiae perferendis.</p>
+                <a href="" class="btn btn-branding-outline">Learn More</a>
+            </div>
+        </div>
+        <div class="col d-none d-lg-block">
+            <img src="images/weatherapp.png" alt="" class="img-fluid">
+        </div>
+        <div class=" row mb-5">
+            <div class="col d-none d-lg-block">
+                <img src="images/cheesecake.png" alt="" class="img-fluid">
+            </div>
+            <div class="col">
+                <div class="project-description">
+                <h2 class="mb-5">Dictionary</h2>
+                <p class="mb-5 text-muted" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt animi quod, esse totam delectus repellendus alias ipsam, autem dolor voluptatem quisquam vitae omnis quo temporibus dolorum a quasi molestiae perferendis.</p>
+                <a href="" class="btn btn-branding-outline">Learn More</a>
+            </div>
+        </div>
+     </div>
+
 </html>
