--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     </div>
     <p class="text-center m-5">
-        Featured projects will be shown below
+       Take a look at what I have done so far...
     </p>
     <div class="container">
         <div class=" row mb-5">
@@ -56,17 +56,8 @@
         <div class="col d-none d-lg-block">
             <img src="images/weatherapp.png" alt="" class="img-fluid">
         </div>
-        <div class=" row mb-5">
-            <div class="col d-none d-lg-block">
-                <img src="images/cheesecake.png" alt="" class="img-fluid">
-            </div>
-            <div class="col">
-                <div class="project-description">
-                <h2 class="mb-5">Dictionary</h2>
-                <p class="mb-5 text-muted" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt animi quod, esse totam delectus repellendus alias ipsam, autem dolor voluptatem quisquam vitae omnis quo temporibus dolorum a quasi molestiae perferendis.</p>
-                <a href="" class="btn btn-branding-outline">Learn More</a>
-            </div>
+        
         </div>
-     </div>
-
+        </div>
+    </div>
 </html>
