corrected address of contacts

--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
           </p>
           <h3>Instagram</h3>
           <p>
-            <a href="https://wwww.instagram.com/Eltyannie" target="_blank">@Eltyannie</a>
+            <a href="https://www.instagram.com/Eltyannie" target="_blank">@eltyannie</a>
           </p>
           <h3>Facebook</h3>
           <p>
