added footer to homepage

--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
           </p>
           <h3>Facebook</h3>
           <p>
-            <a href="https://www.facebook.com/">@Eltina Annie Ngwarai</a>
+            <a href="https://www.facebook.com/Eltina Annie Ngwarai">@Eltina Annie Ngwarai</a>
           </p>
         </div>
     </div>
