--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/ddc3ee268a.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/72cbaa48b9.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
 
     <link
@@ -25,7 +25,7 @@
             <a href="/">
           <img src="images//logo-big.png" class="logo d-none d-md-block" alt="">
           <img src="images//logo-small.jpeg" class="logo d-block d-md-none" alt="">
-        </a>
+           </a>
           <ul>
             <li class="active">
                 <a href="/"> Home</a>
@@ -51,7 +51,7 @@
         </div>
 
     </div>
-    <p class="text-center m-5">
+    <p class="text-center mb-5">
        Take a look at what I have done so far...
     </p>
     <div class="container">
@@ -80,5 +80,32 @@
         
         </div>
         </div>
+        <footer>
+            <div class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex">
+                <div>
+                <h4>Work Enquiry</h4>
+                <p>Let's work together.</p>
+            </div>
+            <div>
+                <a href="" class="btn btn-branding mt-3">Contact me</a>
+            </div>
+            </div>
+        <div class="d-flex justify-content-center mb-5">
+                <a href="mailto:eltinangwarai@gmail.com" class="email-link">eltinangwarai@gmail.com</a>
+         
+        </div> 
+        <div class="social-links d-flex justify-content-center mb-5">
+            <a href="https://www.instagram.com/Eltyannie" target="_blank">
+                <i class="fa-brands fa-instagram"></i>
+            </a> 
+            <a href="https://www.github.com/elty-annie" target="_blank">
+                <i class="fa-brands fa-github"></i>
+            </a> 
+            <a href="https://www.facebook.com/Eltina Annie Ngwarai" target="_blank">
+                <i class="fa-brands fa-facebook"></i>
+            </a> 
+        </div>
     </div>
-</html>
+</footer>
+</html>   
+</body>
