made website SEO friendly

--- a/index.html
+++ b/index.html
@@ -17,27 +17,28 @@
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&amp;family=Poppins:wght@500;700&amp;display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <title>Portfolio</title>
+    <meta name="description" content="Eltina is a front-end developer wh is based in Germany">
+    <title>Front-end developer - Eltina Ngwarai</title>
 </head>
 <body>
     <div class="container">
         <nav class="d-flex justify-content-between">
-            <a href="/">
-          <img src="images//logo-big.png" class="logo d-none d-md-block" alt="">
-          <img src="images//logo-small.jpeg" class="logo d-block d-md-none" alt="">
+            <a href="/" title="Homepage">
+          <img src="images//logo-big.png" class="logo d-none d-md-block" alt="Eltina logo">
+          <img src="images//logo-small.jpeg" class="logo d-block d-md-none" alt="Eltina logo">
            </a>
           <ul>
             <li class="active">
-                <a href="/"> Home</a>
+                <a href="/" title="Homepage"> Home</a>
                </li>
             <li>
-                <a href="about.html"> About</a>
+                <a href="about.html" title="About Eltina"> About</a>
             </li>
             <li>
-                <a href="work.html">Work</a>
+                <a href="work.html" title="Eltina's Work">Work</a>
                 </li>
             <li>
-                <a href="contact.html">Contact</a>
+                <a href="contact.html" title="Eltina's contact">Contact</a>
             </li>
           </ul>
        </nav>
@@ -47,7 +48,7 @@
         <h1>Eltina Ngwarai</h1>
         <h2 mb-3>Front-end developer based in Germany</h2>
         <div>
-            <a href="#" class="btn btn-branding">Contact me</a>
+            <a href="/contact.html" class="btn btn-branding" title="contact me">Contact me</a>
         </div>
 
     </div>
@@ -57,13 +58,13 @@
     <div class="container">
         <div class=" row mb-5">
             <div class="col d-none d-lg-block">
-                <img src="images/cheesecake.png" alt="" class="img-fluid">
+                <img src="images/cheesecake.png" alt="cheesecake project preview" class="img-fluid">
             </div>
             <div class="col">
                 <div class="project-description">
                 <h2 class="mb-5">Cheesecake Project</h2>
                 <p class="mb-5 text-muted" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt animi quod, esse totam delectus repellendus alias ipsam, autem dolor voluptatem quisquam vitae omnis quo temporibus dolorum a quasi molestiae perferendis.</p>
-                <a href="" class="btn btn-branding-outline">Learn More</a>
+                <a href="/work.html" class="btn btn-branding-outline">Learn More</a>
             </div>
         </div>
         <div class=" row mb-5">
@@ -71,11 +72,11 @@
                 <div class="project-description">
                 <h2 class="mb-5">Weather App</h2>
                 <p class="mb-5 text-muted" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt animi quod, esse totam delectus repellendus alias ipsam, autem dolor voluptatem quisquam vitae omnis quo temporibus dolorum a quasi molestiae perferendis.</p>
-                <a href="" class="btn btn-branding-outline">Learn More</a>
+                <a href="/work.html" class="btn btn-branding-outline">Learn More</a>
             </div>
         </div>
         <div class="col d-none d-lg-block">
-            <img src="images/weatherapp.png" alt="" class="img-fluid">
+            <img src="images/weatherapp.png" alt="weather project preview" class="img-fluid">
         </div>
         
         </div>
@@ -83,29 +84,32 @@
         <footer>
             <div class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex">
                 <div>
-                <h4>Work Enquiry</h4>
+                <h3>Work Enquiry</h3>
                 <p>Let's work together.</p>
             </div>
             <div>
-                <a href="" class="btn btn-branding mt-3">Contact me</a>
+                <a href="/contact.html" class="btn btn-branding mt-3" title="Contact Eltina">Contact me</a>
             </div>
             </div>
-        <div class="d-flex justify-content-center mb-5">
+        <div class="d-flex justify-content-center mb-5" title="Email Eltina">
                 <a href="mailto:eltinangwarai@gmail.com" class="email-link">eltinangwarai@gmail.com</a>
          
         </div> 
         <div class="social-links d-flex justify-content-center mb-5">
-            <a href="https://www.instagram.com/Eltyannie" target="_blank">
-                <i class="fa-brands fa-instagram"></i>
+            <a href="https://www.linkedin.com/Eltina Ngwarai" target="_blank" title="Linkedin Profile">
+                <i class="fa-brands fa-linkedin"></i>
             </a> 
-            <a href="https://www.github.com/elty-annie" target="_blank">
+            <a href="https://www.github.com/elty-annie" target="_blank" title="Github profile">
                 <i class="fa-brands fa-github"></i>
             </a> 
-            <a href="https://www.facebook.com/Eltina Annie Ngwarai" target="_blank">
+            <a href="https://www.facebook.com/Eltina Annie Ngwarai" target="_blank" title="Facebook profile">
                 <i class="fa-brands fa-facebook"></i>
             </a> 
         </div>
     </div>
+    <p class="text-center"> 
+        <a href="https://www.github.com/elty-annie" target="_blank">Open sourced code</a>
+         by Eltina Ngwarai</p>
 </footer>
 </html>   
 </body>
