--- a/about.html
+++ b/about.html
@@ -15,10 +15,7 @@
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     ></script>
-    <script
-      src="https://kit.fontawesome.com/ddc3ee268a.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/72cbaa48b9.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
 
     <link
@@ -26,14 +23,36 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>About page</title>
+    <title>About Eltina</title>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+          <a href="/" title="Homepage">
+        <img src="images//logo-big.png" class="logo d-none d-md-block" alt="Eltina logo">
+        <img src="images//logo-small.jpeg" class="logo d-block d-md-none" alt="Eltina logo">
+         </a>
+        <ul>
+          <li>
+              <a href="/" title="Homepage"> Home</a>
+             </li>
+          <li class="active">
+              <a href="about.html" title="About Eltina"> About</a>
+          </li>
+          <li>
+              <a href="work.html" title="Eltina's Work">Work</a>
+              </li>
+          <li>
+              <a href="contact.html" title="Eltina's contact">Contact</a>
+          </li>
+        </ul>
+     </nav>
+  </div>   
     <div class="content-container container">
       <div class="row">
         <div class="col-lg-6">
           <div class="content">
-            <h1 class="mb-4">Hi I am Eltina Ngwarai</h1>
+            <h1 class="mb-4">Hi, I am Eltina Ngwarai</h1>
 
             <h2 class="mb-4">Frontend Developer, based in Germany</h2>
             <p class="mb-5">
@@ -42,7 +61,7 @@
               vitae assumenda rerum nam architecto, quam nemo harum ea mollitia
               suscipit! Dolore?
             </p>
-            <a href="" class="btn btn-branding">See my projects</a>
+            <a href="/work.html" class="btn btn-branding">See my projects</a>
           </div>
         </div>
         <div class="col-lg-6">
@@ -50,5 +69,35 @@
         </div>
       </div>
     </div>
+    <footer>
+      <div class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex">
+          <div>
+          <h3>Work Enquiry</h3>
+          <p>Let's work together.</p>
+      </div>
+      <div>
+          <a href="/contact.html" class="btn btn-branding mt-3" title="Contact Eltina">Contact me</a>
+      </div>
+      </div>
+  <div class="d-flex justify-content-center mb-5" title="Email Eltina">
+          <a href="mailto:eltinangwarai@gmail.com" class="email-link">eltinangwarai@gmail.com</a>
+   
+  </div> 
+  <div class="social-links d-flex justify-content-center mb-5">
+      <a href="https://www.linkedin.com/Eltina Ngwarai" target="_blank" title="Linkedin Profile">
+          <i class="fa-brands fa-linkedin"></i>
+      </a> 
+      <a href="https://www.github.com/elty-annie" target="_blank" title="Github profile">
+          <i class="fa-brands fa-github"></i>
+      </a> 
+      <a href="https://www.facebook.com/Eltina Annie Ngwarai" target="_blank" title="Facebook profile">
+          <i class="fa-brands fa-facebook"></i>
+      </a> 
+  </div>
+</div>
+<p class="text-center"> 
+  <a href="https://www.github.com/elty-annie" target="_blank">Open sourced code</a>
+   by Eltina Ngwarai</p>
+</footer>
   </body>
 </html>
