--- a/contact.html
+++ b/contact.html
@@ -13,22 +13,41 @@
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://kit.fontawesome.com/ddc3ee268a.js"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous" >
+    </script>
+    <script src="https://kit.fontawesome.com/72cbaa48b9.js" crossorigin="anonymous">
+    </script>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-
     <link
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&amp;family=Poppins:wght@500;700&amp;display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>Contact page</title>
+    <title>Contact Eltina</title>
   </head>
   <body>
+    <div class="container">
+        <nav class="d-flex justify-content-between">
+            <a href="/" title="Homepage">
+          <img src="images//logo-big.png" class="logo d-none d-md-block" alt="Eltina logo">
+          <img src="images//logo-small.jpeg" class="logo d-block d-md-none" alt="Eltina logo">
+           </a>
+          <ul>
+            <li >
+                <a href="/index.html" title="Homepage"> Home</a>
+               </li>
+            <li>
+                <a href="about.html" title="About Eltina"> About</a>
+            </li>
+            <li>
+                <a href="work.html" title="Eltina's Work">Work</a>
+                </li>
+            <li class="active">
+                <a href="contact.html" title="Eltina's contact">Contact</a>
+            </li>
+          </ul>
+       </nav>
+    </div>   
     <div class="content-container container">
        <div class="content">
           <h1 class="mb-5">Lets get in touch</h1>
@@ -46,5 +65,26 @@
           </p>
         </div>
     </div>
+    <footer>
+    <div class="d-flex justify-content-center mb-5" title="Email Eltina">
+            <a href="mailto:eltinangwarai@gmail.com" class="email-link">eltinangwarai@gmail.com</a>
+     
+    </div> 
+    <div class="social-links d-flex justify-content-center mb-5">
+        <a href="https://www.linkedin.com/Eltina Ngwarai" target="_blank" title="Linkedin Profile">
+            <i class="fa-brands fa-linkedin"></i>
+        </a> 
+        <a href="https://www.github.com/elty-annie" target="_blank" title="Github profile">
+            <i class="fa-brands fa-github"></i>
+        </a> 
+        <a href="https://www.facebook.com/Eltina Annie Ngwarai" target="_blank" title="Facebook profile">
+            <i class="fa-brands fa-facebook"></i>
+        </a> 
+    </div>
+</div>
+<p class="text-center"> 
+    <a href="https://www.github.com/elty-annie" target="_blank">Open sourced code</a>
+     by Eltina Ngwarai</p>
+</footer>
   </body>
 </html>      
