--- a/work.html
+++ b/work.html
@@ -15,10 +15,7 @@
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     ></script>
-    <script
-      src="https://kit.fontawesome.com/ddc3ee268a.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/72cbaa48b9.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
 
     <link
@@ -26,36 +23,79 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>Work page</title>
+    <title>Eltina's work</title>
   </head>
   <body>
+    <div class="container">
+        <nav class="d-flex justify-content-between">
+
+            <a href="/" title="Homepage">
+          <img src="images//logo-big.png" class="logo d-none d-md-block" alt="Eltina logo">
+          <img src="images//logo-small.jpeg" class="logo d-block d-md-none" alt="Eltina logo">
+           </a>
+          <ul>
+            <li >
+                <a href="/" title="Homepage"> Home</a>
+               </li>
+            <li>
+                <a href="about.html" title="About Eltina"> About</a>
+            </li>
+            <li class="active">
+                <a href="work.html" title="Eltina's Work">Work</a>
+                </li>
+            <li>
+                <a href="contact.html" title="Eltina's contact">Contact</a>
+            </li>
+          </ul>
+       </nav>
+    </div>   
     <div class="content-container container">
        <div class="content">
           <h1 class="mb-5">Take a look at what I've been working on!</h1>
          <div class="row">
           <div class="col-md-6 mb-4">
-            <img src="images/cheesecake.png" alt="" class="img-fluid rounded">
+            <img src="images/cheesecake.png" alt="cheesecake picture" class="img-fluid rounded">
             <h3 class="text-center">Cheesecake Project</h3>
             <p class="text-center text-muted">Built with HTML & CSS</p>
           </div>
-          <div class="col-md-6 mb-4">
-            <img src="images/dictionary.png" alt="" class="img-fluid rounded">
-            <h3 class="text-center">Dictionary Project</h3>
-            <p class="text-center text-muted">Built with HTML, CSS with React</p>
-          </div>
             <div class="col-md-6 mb-4">
-              <img src="images/weatherapp.png" alt="" class="img-fluid rounded">
+              <img src="images/weatherapp.png" alt="weatherapp picture" class="img-fluid rounded">
               <h3 class="text-center">Weatherapp Project</h3>
               <p class="text-center text-muted">Built with HTML, CSS & JS</p>
             </div>
-            
-              <div class="col-md-6 mb-4">
-                <img src="images/translation.png" alt="" class="img-fluid rounded">
-                <h3 class="text-center">Translation Project</h3>
-                <p class="text-center text-muted">Built with HTML, CSS with React</p>
-              </div>
          </div>
       </div>
     </div>
+    <footer>
+        <div class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex">
+            <div>
+            <h3>Work Enquiry</h3>
+            <p>Let's work together.</p>
+        </div>
+        <div>
+            <a href="/contact.html" class="btn btn-branding mt-3" title="Contact Eltina">Contact me</a>
+        </div>
+        </div>
+    <div class="d-flex justify-content-center mb-5" title="Email Eltina">
+            <a href="mailto:eltinangwarai@gmail.com" class="email-link">eltinangwarai@gmail.com</a>
+     
+    </div> 
+    <div class="social-links d-flex justify-content-center mb-5">
+        <a href="https://www.linkedin.com/Eltina Ngwarai" target="_blank" title="Linkedin Profile">
+            <i class="fa-brands fa-linkedin"></i>
+        </a> 
+        <a href="https://www.github.com/elty-annie" target="_blank" title="Github profile">
+            <i class="fa-brands fa-github"></i>
+        </a> 
+        <a href="https://www.facebook.com/Eltina Annie Ngwarai" target="_blank" title="Facebook profile">
+            <i class="fa-brands fa-facebook"></i>
+        </a> 
+    </div>
+</div>
+<p class="text-center"> 
+    <a href="https://www.github.com/elty-annie" target="_blank">Open sourced code</a>
+     by Eltina Ngwarai</p>
+</footer>
+
   </body>
 </html>
