made website SEO friendly

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&amp;family=Poppins:wght@500;700&amp;display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <meta name="description" content="Eltina is a front-end developer wh is based in Germany">
+    <meta name="description" content="Eltina is a front-end developer based in Germany">
     <title>Front-end developer - Eltina Ngwarai</title>
 </head>
 <body>
@@ -63,20 +63,20 @@
             <div class="col">
                 <div class="project-description">
                 <h2 class="mb-5">Cheesecake Project</h2>
-                <p class="mb-5 text-muted" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt animi quod, esse totam delectus repellendus alias ipsam, autem dolor voluptatem quisquam vitae omnis quo temporibus dolorum a quasi molestiae perferendis.</p>
-                <a href="/work.html" class="btn btn-branding-outline">Learn More</a>
+                <p class="mb-5 text-muted" >The cheesecake website was my first project coding. It is a simple landing page, built with HTML, CSS and JavaScript.</p>
+                <a href="https://www.shecodes.io/workshops/shecodes-basics-ed6644ab-b60b-4935-b8ba-897eb4b8d4e8/projects/1042641" class="btn btn-branding-outline">Check it out</a>
             </div>
         </div>
         <div class=" row mb-5">
             <div class="col">
                 <div class="project-description">
                 <h2 class="mb-5">Weather App</h2>
-                <p class="mb-5 text-muted" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt animi quod, esse totam delectus repellendus alias ipsam, autem dolor voluptatem quisquam vitae omnis quo temporibus dolorum a quasi molestiae perferendis.</p>
-                <a href="/work.html" class="btn btn-branding-outline">Learn More</a>
+                <p class="mb-5 text-muted" >Building upon my previously-gained knowledge, I also became skilled in Bootstrap, API’s, real-life development workflow, hosting, and advanced JavaScript. I combined all of these skills to create a fully-functioning weather app.The weather app I created allows users to optain the current temperature, wind speed and humidity for their current location.</p>
+                <a href="https://snazzy-faloodeh-95ce56.netlify.app/" class="btn btn-branding-outline">Check it out</a>
             </div>
         </div>
         <div class="col d-none d-lg-block">
-            <img src="images/weatherapp.png" alt="weather project preview" class="img-fluid">
+            <img src="images/weatherapp.png" alt="weather project preview" class="img-fluid" id="weather-project">
         </div>
         
         </div>
