--- a/work.html
+++ b/work.html
@@ -23,6 +23,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
+    <meta name="description" content="Eltina is a front-end developer based in Germany">
     <title>Eltina's work</title>
   </head>
   <body>
