--- a/about.html
+++ b/about.html
@@ -23,6 +23,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
+    <meta name="description" content="Eltina is a front-end developer based in Germany">
     <title>About Eltina</title>
   </head>
   <body>
