--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </div>
     </div>
     <p class="text-center"> 
-        <a href="https://www.github.com/elty-annie" target="_blank">Open sourced code</a>
+        <a href="https://www.github.com/elty-annie" target="_blank">Open source code</a>
          by Eltina Ngwarai</p>
 </footer>
 </html>   
